fix(admin): Improve table look on small screens

--- a/src/admin/kudos-admin.css
+++ b/src/admin/kudos-admin.css
@@ -181,4 +181,24 @@
 			}
 		}
 	}
+
+	table {
+
+		th,td {
+			display: none;
+		}
+
+		th:nth-child(1),
+		td:nth-child(1) {
+			display: block;
+		}
+
+		@media (min-width: 768px) {
+
+			th,
+			td {
+				display: table-cell; /* Hide a specific column */
+			}
+		}
+	}
 }
